@@ -1,10 +1,0 @@
-package io.airlift.http.client;
-
-/**
- * @deprecated Use {@link io.airlift.http.client.HttpClient}
- */
-@Deprecated
-public interface AsyncHttpClient
-        extends HttpClient
-{
-}
