@@ -45,63 +45,34 @@ public class HttpClientBinder
     {
         checkNotNull(name, "name is null");
         checkNotNull(annotation, "annotation is null");
-        return createBindingBuilder(new AsyncHttpClientModule(name, annotation));
+        return createBindingBuilder(new HttpClientModule(name, annotation));
     }
 
-    private HttpClientBindingBuilder createBindingBuilder(AsyncHttpClientModule module)
+    private HttpClientBindingBuilder createBindingBuilder(HttpClientModule module)
     {
         binder.install(module);
         return new HttpClientBindingBuilder(module,
                 newSetBinder(binder, HttpRequestFilter.class, module.getFilterQualifier()));
     }
 
-    /**
-     * @deprecated Use {@link #bindHttpClient(String, Class)}
-     */
-    @Deprecated
-    public HttpClientAsyncBindingBuilder bindAsyncHttpClient(String name, Class<? extends Annotation> annotation)
-    {
-        checkNotNull(name, "name is null");
-        checkNotNull(annotation, "annotation is null");
-        return createAsyncBindingBuilder(new AsyncHttpClientModule(name, annotation));
-    }
-
-    private HttpClientAsyncBindingBuilder createAsyncBindingBuilder(AsyncHttpClientModule module)
-    {
-        binder.install(module);
-        return new HttpClientAsyncBindingBuilder(module,
-                newSetBinder(binder, HttpRequestFilter.class, module.getFilterQualifier()));
-    }
-
     public static class HttpClientBindingBuilder
-        extends HttpClientAsyncBindingBuilder
     {
-        public HttpClientBindingBuilder(AsyncHttpClientModule module, Multibinder<HttpRequestFilter> multibinder)
-        {
-            super(module, multibinder);
-        }
-    }
-
-    public static class HttpClientAsyncBindingBuilder
-    {
-        private final AsyncHttpClientModule module;
+        private final HttpClientModule module;
         private final Multibinder<HttpRequestFilter> multibinder;
 
-        private HttpClientAsyncBindingBuilder(AsyncHttpClientModule module, Multibinder<HttpRequestFilter> multibinder)
+        public HttpClientBindingBuilder(HttpClientModule module, Multibinder<HttpRequestFilter> multibinder)
         {
             this.module = module;
             this.multibinder = multibinder;
         }
 
-        @SuppressWarnings("unchecked")
-        public HttpClientAsyncBindingBuilder withAlias(Class<? extends Annotation> alias)
+        public HttpClientBindingBuilder withAlias(Class<? extends Annotation> alias)
         {
             module.addAlias(alias);
             return this;
         }
 
-        @SuppressWarnings("unchecked")
-        public HttpClientAsyncBindingBuilder withAliases(Collection<Class<? extends Annotation>> aliases)
+        public HttpClientBindingBuilder withAliases(Collection<Class<? extends Annotation>> aliases)
         {
             for (Class<? extends Annotation> annotation : aliases) {
                 module.addAlias(annotation);
@@ -114,19 +85,18 @@ public class HttpClientBinder
             return multibinder.addBinding();
         }
 
-        @SuppressWarnings("unchecked")
-        public HttpClientAsyncBindingBuilder withFilter(Class<? extends HttpRequestFilter> filterClass)
+        public HttpClientBindingBuilder withFilter(Class<? extends HttpRequestFilter> filterClass)
         {
             multibinder.addBinding().to(filterClass);
             return this;
         }
 
-        public HttpClientAsyncBindingBuilder withTracing()
+        public HttpClientBindingBuilder withTracing()
         {
             return withFilter(TraceTokenRequestFilter.class);
         }
 
-        public HttpClientAsyncBindingBuilder withPrivateIoThreadPool()
+        public HttpClientBindingBuilder withPrivateIoThreadPool()
         {
             module.withPrivateIoThreadPool();
             return this;
